--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -1,20 +1,23 @@
 ---
 title: Product Updates
-description: 'Product updates and improvements from Gocertify'
+description: 'The newest features and improvements from Gocertify'
 ---
 
 <Update label="January 2025" description="">
-  ## Bloomreach Custom Fields
-  We've added support for syncing custom fields to Bloomreach. This means you can now sync additional information about your customers to your Bloomreach account, such as their first name, preferred dress size, department preference, and more.
-  
-  Additionally, we've introduced a new type of custom field, called "multiple choice", which allows the shopper to select multiple options from a list of options.
+  ## Multiple choice custom fields
+  We've introduced a new type of custom field, called "multiple choice", which allows the shopper to select multiple options from a list of options.
 
   Find more information in the [Collect Custom Fields](/section/captureData/customFields) section.
 
-  ## Shopify App
-  We are releasing our brand new Shopify app. It will allow our customers to quickly install our script and enable all of our features on their Shopify stores. 
+  ## Bloomreach Sync Custom Fields
+  We've added support for syncing custom fields to Bloomreach. This means you can now sync additional information about your customers to your Bloomreach account, such as their first name, shopping preferences, and more.
   
-  As a bonus, it will also simplify the hussle of manually generating unique coupon codes for their customers, by automatically generating them when needed.
+  ## Shopify App
+  We are releasing our brand new Shopify app! Quickly install our script and enable all of our features across your Shopify stores with zero code.
+
+  - **No-code head script installation:** Once you've installed the app and connected your store, we'll automatically install the head script site wide - no dev time required.
+  - **Drag and Drop Shopify Blocks:** Simply drag and drop OfferHub, Landing Page and Onsite Messaging blocks onto your pages, no need to edit any code.
+  - **Automatic coupon code feed:** Connect your verification flows to your Shopify Discounts and we'll automatically generate unique coupon codes for your customers, so you don't have to.
 
   Find more information in the [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify) section.
   
@@ -22,3 +25,281 @@ description: 'Product updates and improvements from Gocertify'
     This app is currently in beta and not listed on the Shopify App Store. If you want to try it out, please contact your Customer Success Manager.
   </Info>
 </Update>
+
+<Update label="December 2025" description="">
+  ## Client Dashboard
+    We've added a new client dashboard to help you manage your offers and campaigns!
+</Update>
+
+
+<Update label="May 2024" description="">
+  ## OnSite Messaging
+    Display discounts and offers across your website with our new [OnSite Messaging feature](/section/promoteOffers/on-site-placements). 
+  
+</Update>
+
+<Update label="April 2024" description="">
+  ## DotDigital Integration
+    Sync shopper data to DotDigital to enrich your customer profiles and drive additional revenue.
+  
+</Update>
+
+<Update label="February 2024" description="">
+  ## Emarsys Integration
+    Sync shopper data to Emarsys to enrich your customer profiles and drive additional revenue.
+
+  ## Dashboard Notifications
+    Get weekly summaries of key activities and insights from your dashboard.
+</Update>
+
+<Update label="January 2024" description="">
+  ## Datacapture CSV downloads
+    Download a CSV of all the data captured from your verification flows and import into any CRM or marketing platform.
+</Update>
+
+<Update label="November 2023" description="">
+  ## Bloomreach & OmetriaIntegration
+  Sync shopper data to Bloomreach and Ometria to enrich your customer profiles and drive downstream marketing revenue.
+</Update>
+
+<Update label="July 2023" description="">
+  ## OfferHub
+    Host all your offers in one SEO optimised landing page!
+
+  ## CouponAPI integration
+    Gocertify is now integrated with CouponAPI - we'll automatically generate coupon codes for your customers, so you don't have to.
+</Update>
+
+<Update label="April 2023" description="">
+  ## Cashback
+    We've added a new reward type! Give shoppers cashback on their purchases and drive additional revenue and loyalty.
+</Update>
+
+<Update label="January 2023" description="">
+  ## Schedule Campaigns
+    Plan your campaigns in advance and we'll automatically publish them at the right time.
+</Update>
+
+<Update label="September 2022" description="">
+  ## Enrich your CRM with first-party data
+    {/* <Frame>
+        <img src="/images/changelog/enrich-CRM.png" alt="Enrich your CRM with first-party data" />
+    </Frame> */}
+    We can now pass through the data points collected in the verification flow into your CRM. Allowing you to personalise your experience for specific occupation and age groups.
+  
+  ## New verification group: Government employees
+    We can now verify Government Staff and Civil Servants in UK, US, CA and AU. Opening up key workers to now a total of 25+ million public sector employees.
+
+  ## Verify Healthcare & Emergency workers via work emails
+    34% of healthcare and emergency employees have work emails. These workers can now verify their ownership of their email address for a discount.
+
+  ## Verify supermarket staff via work emails
+    Many supermarket staff have work emails. These workers can now verify their ownership of their email address for a discount.
+</Update>
+
+<Update label="July 2022" description="">
+  ## Translate your verification flow
+    {/* <Frame>
+        <img src="/images/changelog/translate-flow.png" alt="Translate Verification Flow" />
+    </Frame> */}
+    You can now translate your verification flow into German, Spanish, Danish, French, Italian, Dutch, Swedish, Japanese & Korean!
+  
+</Update>
+
+<Update label="May 2022" description="">
+  ## Shoppers can now choose how they verify
+    {/* <Frame>
+        <img src="/images/changelog/multi-method-verification-update.png" alt="Multi-method verification update" />
+    </Frame> */}
+    Give your shoppers a choice in how they get verified. More choice = quicker verification and increased conversion rates.
+  
+</Update>
+
+<Update label="February 2022" description="">
+  ## "Donate for a discount" is now free for initiatives supporting Ukraine 
+    <Frame>
+        <img src="/images/changelog/ukraine-heart.png" alt="Donate for Discount Ukraine" />
+    </Frame>
+    We're providing our services for free to brands that would like to run a "Donate for a Discount" campaign supporting Ukraine. We expect campaigns like these to drive £100,000s in donations and really make a difference.
+  
+</Update>
+
+
+<Update label="January 2022" description="">
+  ## Run closed-group offers on any publisher
+    {/* <Frame>
+        <img src="/images/changelog/update-partner-promo.png" alt="Update Partner Promo" />
+    </Frame> */}
+    Promote any closed-group offer on all your existing partners - expanding to an audience outside of yourclosed-group publishers. And leverage the reach of the largest websites.
+
+  ## Drive donations for a charity of your choice
+    <Frame>
+        <img src="/images/changelog/justgiving-update.png" alt="Justgiving update" />
+    </Frame>
+    We have partnered up with JustGiving to create an incredibly easy way for you to reward any shopper that donates to any JustGiving charity.
+  
+</Update>
+
+<Update label="November 2021" description="">
+  ## Reward Follows
+    {/* <Frame>
+        <img src="/images/changelog/reward-follow.png" alt="Reward Follows" />
+    </Frame> */}
+    Supercharge your marketing efforts by rewarding shoppers who follow you on social media.
+  
+</Update>
+
+<Update label="September 2021" description="">
+  ## Verify Strava Activities
+    <Frame>
+        <img src="/images/changelog/reward-strava.png" alt="Verify Strava Activites" />
+    </Frame>
+    Reward shoppers who achieve health and fitness goals. These offers can be promoted across other publishers, email, social and other marketing channels, with Gocertify verifying activities. Launch an offer that stands out, generate PR and word-of-mouth.
+  
+</Update>
+
+<Update label="June 2021" description="">
+  ## Partnership with Benefits Everyone
+    {/* <Frame>
+        <img src="/images/changelog/benefits-everyone-gocertify.png" alt="Benefits Everyone" />
+    </Frame> */}
+    We've partnered with Benefits Everyone! Every offer available to the NHS will now be promoted through their NHS employee benefits portal.
+  
+</Update>
+
+<Update label="March 2021" description="">
+  ## Verify any age category!
+    {/* <Frame>
+        <img src="/images/changelog/custom-age.png" alt="Custom age verification" />
+    </Frame> */}
+    Our AI driving license & passport verification can now verify any age category. Just let us know the min and max age that you'd like to target and we'll set everything up.
+
+
+  ## New Reward Type - Gated Content
+    <Frame>
+        <img src="/images/changelog/update-reward-link.png" alt="Content Gate" />
+    </Frame>
+    Alongside our standard coupon code reward you can now give verified users access to an exclusive link. This link can lead shoppers to a hidden landing page with discounted products, somewhere to claim a freebie and more!
+
+  ## Verify Postal & Delivery Staff
+    {/* <Frame>
+        <img src="/images/changelog/delivery.png" alt="Delivery staff verification" />
+    </Frame> */}
+    We've added postal and delivery employees to our key worker verification tool! Attract and verify an additional 300k people (UK only). Delivery staff played a vital role throughout the pandemic. This is the very first time brands can reward this group.
+  
+</Update>
+
+<Update label="February 2021" description="">
+  ## Auto-Add Coupons to Checkout
+    <Frame>
+        <img src="/images/changelog/verification-complete.png" alt="Auto-add coupons to checkout" />
+    </Frame>
+    Auto-add a coupon code in the basket when someone is verified - improving your conversion rates and customer experience. Shoppers won't have the problem of losing the coupon in their clipboard!
+
+</Update>
+
+<Update label="January 2021" description="">
+  ## Verify Supermarket Staff
+    {/* <Frame>
+        <img src="/images/changelog/verify-supermarket-staff.png" alt="Verify supermarket staff" />
+    </Frame> */}
+    We've added supermarket employees to our key worker verification tool. Attract and verify an additional 1.3m people who played a vital role throughout the pandemic. This is the very first time brands can reward this group.
+
+  ## Reward refer a friend!
+    {/* <Frame>
+        <img src="/images/changelog/megaphone.png" alt="Reward refer a friend" />
+    </Frame> */}
+    Reward anyone that shares a Gocertify offer with entry into a competition or freebie
+</Update>
+
+<Update label="December 2020" description="">
+  ## Quicker, more organised & more stylish
+    <Frame>
+        <img src="/images/changelog/V2-launch.png" alt="V2 Launch" />
+    </Frame>
+
+    - **Quicker:** just 2.5 seconds between submitting a verification and receiving a coupon code.
+    - **More organised:** organise all your rewards into one group discount hub.
+    - **More stylish:** take a look at our revamped design.
+</Update>
+
+<Update label="October 2020" description="">
+  ## Live in United States and Ireland!
+    <Frame>
+        <img src="/images/changelog/live-US-Ireland.png" alt="Live in United States and Ireland" />
+    </Frame>
+
+    We're now helping brands offer group discounts in the United States and Ireland. Let us know where you'd like us to focus on next.
+</Update>
+
+<Update label="September 2020" description="">
+  ## Verify Military
+    {/* <Frame>
+      <img src="/images/changelog/military-discount.png" alt="Military Verifications" />
+    </Frame> */}
+    We've added support for Military Verification. Instantly reward any member of the armed forces.
+</Update>
+
+<Update label="July 2020" description="">
+
+  ## Verify Youth
+    {/* <Frame>
+      <img src="/images/changelog/amazon-youth.png" alt="Youth Verifications" />
+    </Frame> */}
+    We can now verify under-25s! Our first of its kind image recognition tech analyses a picture of a Passport or Driving License to establish someone's age in seconds.
+  
+</Update>
+
+<Update label="June 2020" description="">
+  ## Webcam ID Scanner
+  <Frame>
+    <img src="/images/changelog/webcam-image.gif" alt="Webcam ID Scanner" />
+  </Frame>
+  Your users can now take a picture of their ID with their webcam. No need for them to a take picture on their phone and transfer to their desktop with our new uploader.
+  
+</Update>
+
+
+<Update label="May 2020" description="">
+
+  ## Verify Students
+    {/* <Frame>
+      <img src="/images/changelog/student-verification.png" alt="Student Verifications" />
+    </Frame> */}
+    We've added support for Student Verification you you can now instantly verify any Student at a UK School or University.
+
+  ## Verify Police and Fire Service workers
+    {/* <Frame>
+      <img src="/images/changelog/fire-nhs-police.png" alt="Police and Fire Service Verifications" />
+    </Frame> */}
+    You can now verify anyone who works for the Police and Fire Service using image recognition on workplace IDs.
+
+  ## Verify teachers
+    {/* <Frame>
+      <img src="/images/changelog/teacher-update.png" alt="Teacher Verifications" />
+    </Frame> */}
+    You can now verify teachers! From now onwards you can can verify 500k UK teachers who work at a registered UK school. Teachers are verified using their work email address.
+
+  ## Create a landing page
+    <Frame>
+      <img src="/images/changelog/embedWidget.png" alt="Embed your Widget" />
+    </Frame>
+    You can now verify your users without them having to leave your website. Every brand that signs up to Gocertify receives a widget which can be added to your site with one line of code.
+    Find more information in the [Getting Started](/section/gettingStarted/landingPages) section.
+
+  ## Personalise your favicon
+    <Frame>
+      <img src="/images/changelog/favicon-update.png" alt="Personalised Favicons" />
+    </Frame>
+
+  We're always adding features to make sure your page is as on-brand as possible. Now your Gocertify landing page includes your own favicon!
+</Update>
+
+
+
+
+
+
+
+
+
