--- a/changelog/overview.mdx
+++ b/changelog/overview.mdx
@@ -3,49 +3,163 @@ title: Product Updates
 description: 'The newest features and improvements from Gocertify'
 ---
 
+<Update label="February 2025" description="">
+  ## New custom OSM Visibility rules
+  <Frame>
+        <img src="/images/osm/osmScriptVisibilityRule.png" alt="Path rule" width="100%" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Use JavaScript to define your _own visibility rules_ based on **any data** available on site or in your datalayer.
+  For example, you could create a custom rule to only show an offer to shoppers who have a certain basket value, helping drive an increase in AoV.
+  Find more information in the [On Site Messaging](/section/promoteOffers/osmVisibility#script) section.
+  
+</Update>
+
 <Update label="January 2025" description="">
   ## Multiple choice custom fields
-  We've introduced a new type of custom field, called "multiple choice", which allows the shopper to select multiple options from a list of options.
 
-  Find more information in the [Collect Custom Fields](/section/captureData/customFields) section.
+  <Frame>
+    <img src="/images/customFields/customfield-multiSelect.png" alt="Multiple choice custom fields" />
+  </Frame>
 
-  ## Bloomreach Sync Custom Fields
-  We've added support for syncing custom fields to Bloomreach. This means you can now sync additional information about your customers to your Bloomreach account, such as their first name, shopping preferences, and more.
+  [DataCapture](/section/captureData/overview) now supports [multiple choice](/section/captureData/customFields#multi-select) custom fields. Collect deeper insights on your shoppers and drive more impactful downstream marketing campaigns.
+
+  ## Sync Custom Fields to Bloomreach
+  We've added support for syncing custom fields to Bloomreach. This means you can now sync your customer's complete profile to your Bloomreach account and use it to power targeted marketing campaigns.
   
-  ## Shopify App
-  We are releasing our brand new Shopify app! Quickly install our script and enable all of our features across your Shopify stores with zero code.
+  ## Shopify App!
 
-  - **No-code head script installation:** Once you've installed the app and connected your store, we'll automatically install the head script site wide - no dev time required.
+  <Frame>
+    <img src="/images/changelog/shopify-app.png" alt="Shopify App" />
+  </Frame>
+
+  Our team have been hard at work building a brand new Shopify app! Quickly install Gocertify site wide and access all our features across your online store with zero code.
+
+  - **No-code head script installation:** Once you've installed the app and connected your store, we'll automatically install the Gocertify head script site wide - no dev time required.
   - **Drag and Drop Shopify Blocks:** Simply drag and drop OfferHub, Landing Page and Onsite Messaging blocks onto your pages, no need to edit any code.
   - **Automatic coupon code feed:** Connect your verification flows to your Shopify Discounts and we'll automatically generate unique coupon codes for your customers, so you don't have to.
 
   Find more information in the [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify) section.
   
-  <Info>
-    This app is currently in beta and not listed on the Shopify App Store. If you want to try it out, please contact your Customer Success Manager.
-  </Info>
+  <Info> This app is currently in beta and not listed on the Shopify App Store. If you want to try it out, please contact your Customer Success Manager.</Info>
 </Update>
 
-<Update label="December 2025" description="">
-  ## Client Dashboard
-    We've added a new client dashboard to help you manage your offers and campaigns!
+<Update label="November 2024" description="">
+  ## Refreshed Documentation
+    We've given our documentation a _complete overhaul_, making it even easier to [get started](/section/gettingStarted/overview) and helping you get the most out of the Gocertify platform.
+
+  ## gocertify.js Released
+    We've released a new version of our head script, `gocertify.js`, replacing the old `embed.js` script. This new version increases performance and includes a number of new features (such as [On Site Messaging](/section/promoteOffers/on-site-placements)).
+    To start using the new script, please follow our [upgrade guide](/section/gettingStarted/upgradeGuide).
+</Update>
+
+<Update label="October 2024" description="">
+  ## New Placement Types
+  <Frame>
+        <img src="/images/floatingButtonOSM.png" alt="Floating OSM" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  We've added a range of new placement types to On Site Messaging. Display your offers exactly where you want them, whether that's in the header, inline or floating across your site.
+  Find more information in the [On Site Messaging](/section/promoteOffers/on-site-placements) section.
+
+  - **Floating Button:** a hovering trigger that floats above the page content.
+  - **Sticky Bar:** a prominent sticky bar at the top or bottom of your site.
+  - **In-line:** rewards directly on product/checkout pages, maximising conversion of high intent shoppers.
+
+
+  ## OSM Multi-campaign Picker
+  <Frame>
+        <img src="/images/changelog/osmPicker.png" alt="OSM Picker" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+     OSM now supports multiple campaigns, including both external and closed-group offers, helping you drive incremental conversions.
+
+
+  ## OSM Dashboard Refresh
+  <Frame>
+        <img src="/images/visibility-rule.png" alt="Setting visibility rules" style={{ borderRadius: '0.5rem' }} />
+  </Frame>
+  Off the back of our exciting launch of On Site Messaging [Visibility Rules](/section/promoteOffers/osmVisibility), we've given the OSM page a refresh!
+
+  - **New design:** a fresh look and feel that keeps everything organised and intuitive.
+  - **Improved usability:** easier to add new offers and campaigns to your OSM, and manage existing ones.
+  - **Fine-tuned controls:** we've added a number of new controls to help you fine-tune your OSM campaigns.
+  
+  
+</Update>
+
+<Update label="September 2024" description="">
+  ## OSM Visibility rules
+    <Frame>
+        <img src="/images/changelog/osmVisibilityRule.png" alt="Path rule" width="100%" style={{ borderRadius: '0.5rem' }} />
+    </Frame>
+    Promote the right offer to the right shopper at the right time. 
+    
+    Our visibility rules give you complete control over which offers are visible to which shoppers. 
+    Find more information in the [On Site Messaging](/section/promoteOffers/osmVisibility) section.
+    We currently support:
+
+    - **Time of day:** show an offer between certain hours, catching your shoppers when they're most likely to convert.
+    - **Page URL:** show an offer on certain pages of your site, helping you target specific products or categories.
+    - **Price:** show an offer for products within a certain price range, ensuring you keep your offers in line with your pricing strategy.
+    - **Dwell time:** show an offer after a user has spent a certain amount of time on a page, driving incremental conversions.
+    - **Date:** show an offer between certain dates, helping you run targeted campaigns around key dates and events.
+
+    
+
+
+  
+  
+</Update>
+
+<Update label="August 2024" description="">
+  ## Custom Fields
+    <Frame>
+        <img src="/images/customFields/customfield-overview.png" alt="Custom Fields" />
+    </Frame>
+    Use [Custom Fields](/section/captureData/customFields) to collect any additional data you require during the [verification flow](/section/captureData/overview). Personalise the shopping experience and retarget shoppers. We currently support:
+
+    - **Free Text:** useful for collecting names, postcodes or other unstructured information.
+    - **Dropdown:** best when you have a long list of potential options, such as product categories.
+    - **Radio Buttons:** used when you have a short list of potential options, such as product size, and want the user to select one.
+    - **Multi Select:** allow users to select multiple options from a list, useful for collecting information such as hobbies or interests.
+    - **Date Picker:** make it easy to collect dates, such as dates of birth or other significant events.
+
+
+   ## Disability Discounts
+   <Frame>
+        <img src="/images/changelog/eden-mobility.png" alt="Eden Mobility" />
+    </Frame>
+   We've added a new verification group, enabling you to provide rewards to the disabled community.
+   We're delighted that Eden Mobility is the first brand to adopt this new reward type!
 </Update>
 
 
 <Update label="May 2024" description="">
-  ## OnSite Messaging
-    Display discounts and offers across your website with our new [OnSite Messaging feature](/section/promoteOffers/on-site-placements). 
+  ## Promote rewards with On Site Messaging
+    <Frame>
+        <img src="/images/hero-example.png" alt="Verify supermarket staff" />
+    </Frame>
+
+    Display discounts and offers across your website with our new [OnSite Messaging feature](/section/promoteOffers/on-site-placements).
+
+    On Site messaging (OSM) is a powerful way to drive conversions by surfacing offers directly on product/checkout pages, maximising conversion of high intent shoppers.
+    No additional development work is needed to add OSM to your site as long as the [head script](section/gettingStarted/integrateOnSite) has already been installed. 
+
   
 </Update>
 
 <Update label="April 2024" description="">
   ## DotDigital Integration
+  <Frame>
+        <img src="/images/integrations/Dotdigital-Integration.png" alt="DotDigital Integration" />
+  </Frame>
     Sync shopper data to DotDigital to enrich your customer profiles and drive additional revenue.
   
 </Update>
 
 <Update label="February 2024" description="">
   ## Emarsys Integration
+  <Frame>
+        <img src="/images/integrations/Emarsys-Integration.png" alt="Emarsys Integration" />
+  </Frame>
     Sync shopper data to Emarsys to enrich your customer profiles and drive additional revenue.
 
   ## Dashboard Notifications
@@ -57,16 +171,43 @@ description: 'The newest features and improvements from Gocertify'
     Download a CSV of all the data captured from your verification flows and import into any CRM or marketing platform.
 </Update>
 
+<Update label="December 2023" description="">
+  ## Client Dashboard Launches!
+  <Frame>
+        <img src="/images/gocertify-dashboard.png" alt="Client Dashboard" />
+  </Frame>
+    Our mission is to give brands **complete control** over the rewards they run. 
+    
+    We are therefore incredibly excited to launch our new Client Dashboard!
+    The intial focus is on providing you with high quality reporting on the impact of your rewards, but our roadmap is packed full of dashboard updates designed to help you get the most out of Gocertify, from tweaking your messaging to crafting the perfect reward flow.
+</Update>
+
 <Update label="November 2023" description="">
-  ## Bloomreach & OmetriaIntegration
-  Sync shopper data to Bloomreach and Ometria to enrich your customer profiles and drive downstream marketing revenue.
+  ## Bloomreach Integration
+  <Frame>
+        <img src="/images/integrations/Bloomreach-Integration.png" alt="Bloomreach Integration" />
+  </Frame>
+  Sync shopper data to Bloomreach to enrich your customer profiles and drive downstream marketing revenue.
+
+  ## Ometria Integration
+  <Frame>
+        <img src="/images/integrations/Ometria-Integration.png" alt="Ometria Integration" />
+  </Frame>
+  Sync shopper data to Ometria to enrich your customer profiles and drive downstream marketing revenue.
 </Update>
 
 <Update label="July 2023" description="">
   ## OfferHub
-    Host all your offers in one SEO optimised landing page!
+  <Frame>
+    <img src="/images/GoCertify-OfferHub.png" alt="OfferHub Launch" />
+  </Frame>
+    Host all your offers in one SEO optimised landing page! [OfferHub](/section/promoteOffers/offerHub) lets you instantly showcase all your discounts in one place and drive traffic to your site.
 
-  ## CouponAPI integration
+  - **Single discount page** Display open offers alongside your closed-group offers in one SEO optimised page.
+  - **Auto-update** OfferHub will automatically update with new offers and discounts.
+  - **On-brand design** Keep your page on-site and on-brand.
+
+  ## Integrate CouponAPI
     Gocertify is now integrated with CouponAPI - we'll automatically generate coupon codes for your customers, so you don't have to.
 </Update>
 
@@ -87,7 +228,7 @@ description: 'The newest features and improvements from Gocertify'
     </Frame> */}
     We can now pass through the data points collected in the verification flow into your CRM. Allowing you to personalise your experience for specific occupation and age groups.
   
-  ## New verification group: Government employees
+  ## Verify Government employees
     We can now verify Government Staff and Civil Servants in UK, US, CA and AU. Opening up key workers to now a total of 25+ million public sector employees.
 
   ## Verify Healthcare & Emergency workers via work emails
