--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -89,7 +89,7 @@ Tag managers let you can easily add the Gocertify script site-wide without needi
     </Steps>
   </Accordion>
 
-  <Accordion icon="shopify" title="Shopify">
+  <Accordion icon="shopify" title="Shopify (Coming soon)">
 
     <Steps>
     <Step title="Request an install link">
