--- a/section/gettingStarted/integrateOnSite.mdx
+++ b/section/gettingStarted/integrateOnSite.mdx
@@ -26,6 +26,9 @@ Integrate Gocertify by adding the following Gocertify <Tooltip tip="Our script i
           })();
         </script>
       ```
+<Tip>
+  If you encounter the error `Refused to load the script 'https://assets.gocertify.me/assets/gocertify.js'` due to Content Security Policy violations, add this domain to your CSP whitelist to resolve the issue.
+</Tip>
 
 ### Option 1: Use tag manager (no dev required)
 Tag managers let you can easily add the Gocertify script site-wide without needing a developer. Pick your prefered manager to see how it's done.
