--- a/section/trackImpact/customTracking.mdx
+++ b/section/trackImpact/customTracking.mdx
@@ -1,7 +1,7 @@
 ---
-title: Conversion Tracking
-description: 'Monitor all your transactions and conversions in one place.'
-icon: "money-bill-1"
+title: Direct Conversion Tracking
+description: 'Using a custom tracking script to track your conversions.'
+icon: "person-rays"
 ---
 
 <Tip>
