--- a/section/trackImpact/affiliateTracking.mdx
+++ b/section/trackImpact/affiliateTracking.mdx
@@ -4,7 +4,7 @@ description: 'Using an affiliate network to track your conversions.'
 icon: "circle-nodes"
 ---
 
-If you're already using an affiliate network (like Awin or Rakuten), you can leverage your existing setup to track verified shoppers through their customer journey. This approach requires minimal technical implementation as the affiliate network handles the attribution.
+If you're already using an affiliate network (like Awin or Rakuten), you can use your existing setup to track verified shoppers through their customer journey. This approach requires minimal technical implementation as the affiliate network handles the attribution.
 
 <Steps>
   <Step title="Create a new tracking link">
