--- a/section/trackImpact/affiliateTracking.mdx
+++ b/section/trackImpact/affiliateTracking.mdx
@@ -1,7 +1,7 @@
 ---
-title: Affiliate Network
+title: Via Affiliate Network
 description: 'Using an affiliate network to track your conversions.'
-icon: "circle-nodes"
+icon: "fa-fw"
 ---
 
 If you're already using an affiliate network (like Awin or Rakuten), you can use your existing setup to track verified shoppers through their customer journey. This approach requires minimal technical implementation as the affiliate network handles the attribution.
