--- a/section/trackImpact/directTracking.mdx
+++ b/section/trackImpact/directTracking.mdx
@@ -1,7 +1,7 @@
 ---
-title: Direct Conversion Tracking
+title: Via Direct Tracking
 description: 'Using a custom tracking script to track your conversions.'
-icon: "person-rays"
+icon: "fa-fw"
 ---
 
 <Tip>
