--- a/section/promoteOffers/shopifyIntegration.mdx
+++ b/section/promoteOffers/shopifyIntegration.mdx
@@ -4,7 +4,7 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shopify'
 ---
 
-goertify has a native integration with Shopify. This allows you to easily promote Gocertify offers across your Shopify site. To install your shopify
+Gocertify has a native integration with Shopify. This allows you to easily promote Gocertify offers across your Shopify site. To install your shopify
 app follow the Shopify Specific instructions in [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify). We also can connect directly to your [Shopify discounts](/section/buildRewardFlows/discounts#integrating-with-shopify) to create unique codes for each shopper.
 
 Once installed you will be able to see the following Gocertify blocks in your Shopify builder:
