Adding beta testing flags

--- a/section/promoteOffers/shopifyIntegration.mdx
+++ b/section/promoteOffers/shopifyIntegration.mdx
@@ -4,6 +4,10 @@ description: 'Start building loyal communities with targeted, gated offers.'
 icon: 'shopify'
 ---
 
+<Tip>
+  This feature is undergoing beta testing and will be available soon.
+</Tip>
+
 Gocertify has a native integration with Shopify. This allows you to easily promote Gocertify offers across your Shopify site. To install your shopify
 app follow the Shopify Specific instructions in [Integrate on Site](/section/gettingStarted/integrateOnSite#shopify). We also can connect directly to your [Shopify discounts](/section/buildRewardFlows/discounts#integrating-with-shopify) to create unique codes for each shopper.
 
