--- a/section/trackImpact/directTracking.mdx
+++ b/section/trackImpact/directTracking.mdx
@@ -5,7 +5,7 @@ icon: "fa-fw"
 ---
 
 <Tip>
-  This feature is in active development and will be available soon.
+  This feature is undergoing beta testing and will be available soon.
 </Tip>
 
 In order to track conversions in your website you will need to add 2 small snippets of code to your website.
